welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: not found: value estSurbiscuit
if (estSurbiscuit!){
    ^